Envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/col"
                route:
                  prefix_rewrite: "/api/Students"
                  cluster: "college"

              - match:
                  prefix: "/hr"
                route:
                  prefix_rewrite: "/api/Employees"
                  cluster: hr
          http_filters:
          - name: envoy.filters.http.router
  
  clusters:
  - name: college
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: college
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: college_service
                port_value: 80
           
  - name: hr
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: hr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: hr_service
                port_value: 80
